--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PictureOfTheDay</string>
+    <string name="search_wiki">Найти в Википедии</string>
+    <string name="wiki_helper_text">Поищите термин в Википедии</string>
+    <string name="photo_of_the_day_stub">Photo of the day</string>
+    <string name="wikipedia">Wikipedia</string>
 </resources>
